# starfish

./: CMakeLists.txt  README.md  starfish.sln  starfish.vcxproj  starfish.vcxproj.filters
include/: starfish-astronomy.hpp  starfish-constants.hpp  starfish-hosek-wilkie.hpp  starfish-ipbsky.hpp  starfish-pbsky.hpp  starfish.hpp
src/: starfish-astronomy.cpp  starfish-hosek-wilkie.cpp  starfish-pbsky.cpp  starfish_pch.cpp
starfish-tests/: starfish-tests.cpp  starfish-tests.vcxproj  starfish-tests.vcxproj.filters
